# cmake_project_template

./: README.md  cookiecutter.json
cpp-cmake-conan-template/{{cookiecutter.project_slug}}/: CMakeLists.txt  Jenkinsfile  conanfile.py  sonar-project.properties
cpp-cmake-conan-template/{{cookiecutter.project_slug}}/.github/workflows/: build.yml
cpp-cmake-template/: cookiecutter.json
cpp-cmake-template/{{cookiecutter.project_slug}}/: Jenkinsfile
cpp-cmake-template/{{cookiecutter.project_slug}}/.github/workflows/: build.yml
cpp-cmake-template/{{cookiecutter.project_slug}}/src/: {{cookiecutter.project_slug}}.cpp
my_cmake_project/: CMakeLists.txt  README.md
